--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "name": "vite-project",
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --open",
     "build": "vite build",
-    "buildReact": "react-scripts build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "dom": "^0.0.3",
-    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-visibility-sensor": "^5.1.1",
     "router": "^1.3.8"
   },
   "devDependencies": {
