--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dom": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "router": "^1.3.8"
   },
   "devDependencies": {
