--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite --open",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+"predeploy": "npm run build",
+"deploy": "gh-pages -d build"
   },
   "dependencies": {
     "dom": "^0.0.3",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.2",
@@ -25,5 +28,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "vite": "^4.3.9"
-  }
+  },
+  "homepage": "https://tromp86.github.io/ProjectMain/"
 }
